- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5550] Rename tx_seminars_FrontEnd_EventHeadline to Tx_Seminars_FrontEnd_EventHeadline
- [#5549] Rename tx_seminars_FrontEnd_EventEditor to Tx_Seminars_FrontEnd_EventEditor
- [#5577] Rename tx_seminars_OldModel_Abstract to Tx_Seminars_OldModel_Abstract
- [#5576] Rename tx_seminars_Model_AbstractTimeSpan to Tx_Seminars_Model_AbstractTimeSpan
- [#5563] Rename tx_seminars_Mapper_BackEndUserGroup to Tx_Seminars_Mapper_BackEndUserGroup
- [#5547] Rename tx_seminars_FrontEnd_DefaultController to Tx_Seminars_FrontEnd_DefaultController
- [#5546] Rename tx_seminars_FrontEnd_Countdown to Tx_Seminars_FrontEnd_Countdown
- [#5545] Rename tx_seminars_FrontEnd_CategoryList to Tx_Seminars_FrontEnd_CategoryList
- [#5544] Rename tx_seminars_FrontEnd_AbstractView to Tx_Seminars_FrontEnd_AbstractView
- [#5543] Rename tx_seminars_cli_MailNotifier to Tx_Seminars_Cli_MailNotifier
- [#5538] Rename tx_seminars_BagBuilder_Speaker to Tx_Seminars_BagBuilder_Speaker
- [#5537] Rename tx_seminars_BagBuilder_Registration to Tx_Seminars_BagBuilder_Registration
- [#5536] Rename tx_seminars_BagBuilder_Organizer to Tx_Seminars_BagBuilder_Organizer
- [#5524] Rename tx_seminars_BagBuilder_Event to Tx_Seminars_BagBuilder_Event
- [#5535] Rename tx_seminars_BagBuilder_Category to Tx_Seminars_BagBuilder_Category
- [#5534] Rename tx_seminars_BagBuilder_Abstract to Tx_Seminars_BagBuilder_Abstract
- [#5533] Rename tx_seminars_Bag_TimeSlot to Tx_Seminars_Bag_TimeSlot
- [#5532] Rename tx_seminars_Bag_Speaker to Tx_Seminars_Bag_Speaker
- [#5531] Rename tx_seminars_Bag_Registration to tx_seminars_Bag_Registration
- [#5573] Fix the spelling of "comma-separated"