@@ -21,7 +21,7 @@ use TYPO3\CMS\Core\Utility\GeneralUtility;
  *
  * @author Bernd Schönbach <bernd@oliverklee.de>
  */
-class tx_seminars_FrontEnd_PublishEvent extends tx_oelib_templatehelper {
+class Tx_Seminars_FrontEnd_PublishEvent extends Tx_Oelib_TemplateHelper {
 	/**
 	 * @var int
 	 */
